--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,13 +39,14 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_screenutil: ^5.6.0
   flutter_svg: ^1.1.6
-  provider: ^6.0.5
+#  provider: ^6.0.5
   audio_session: ^0.1.13
   flutter_staggered_grid_view: ^0.6.2
   get: ^4.6.5
-  just_audio_background: ^0.0.1-beta.9
-  just_audio: ^0.9.31
-  rxdart: ^0.27.7
+  just_audio_background:
+  just_audio:
+  dio: ^4.0.6
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
