--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   just_audio:
   dio: ^4.0.6
   cached_network_image: ^3.2.3
+  permission_handler: ^10.2.0
+  on_audio_query: ^2.6.1
 
 dev_dependencies:
   flutter_test:
