--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: any
+  shared_preferences: ^2.0.17
   flutter_screenutil: ^5.6.0
   flutter_svg: ^1.1.6
 #  provider: ^6.0.5
@@ -49,6 +49,8 @@ dependencies:
   cached_network_image: ^3.2.3
   permission_handler: ^10.2.0
   on_audio_query: ^2.6.1
+  connectivity_plus: ^2.3.6+1
+  internet_connection_checker: ^0.0.1+4
 
 dev_dependencies:
   flutter_test:
