--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   on_audio_query: ^2.6.1
   connectivity_plus: ^2.3.6+1
   internet_connection_checker: ^0.0.1+4
+  flutter_native_splash: ^2.2.17
 
 dev_dependencies:
   flutter_test:
