--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.17
-  flutter_screenutil: ^5.6.0
+#  flutter_screenutil: ^5.6.0
   flutter_svg: ^1.1.6
 #  provider: ^6.0.5
   audio_session: ^0.1.13
