--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,9 +19,11 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize"
-            tools:ignore="MissingClass">
-
+            android:windowSoftInputMode="adjustResize">
+            <!-- Specifies an Android theme to apply to this Activity as soon as
+                 the Android process has started. This theme is visible to the user
+                 while the Flutter UI initializes. After that, this theme continues
+                 to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
@@ -35,7 +37,7 @@
            android:name="com.ryanheise.audioservice.AudioService"
            android:foregroundServiceType="mediaPlayback"
            android:exported="true"
-            tools:ignore="MissingClass">
+           tools:ignore="MissingClass">
            <intent-filter>
                <action android:name="android.media.browse.MediaBrowserService" />
            </intent-filter>
@@ -43,13 +45,18 @@
         <receiver
            android:name="com.ryanheise.audioservice.MediaButtonReceiver"
            android:exported="true"
-            tools:ignore="MissingClass">
+           tools:ignore="MissingClass">
            <intent-filter>
                <action android:name="android.intent.action.MEDIA_BUTTON" />
            </intent-filter>
         </receiver>
-       <meta-data
+        <!-- Don't delete the meta-data below.
+             This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+        <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+           android:name="io.flutter.embedding.android.SplashScreenDrawable"
+           android:resource="@drawable/launch_background" />
     </application>
 </manifest>
